# scooter

./: .gitignore  README.md  deploy.sh  package.xml  setup.cfg  setup.py
UI/scooter_ui_dummy/: package.xml  setup.py
UI/scooter_ui_dummy/launch/: scooter_ui_dummy.launch.py  scooter_ui_dummy_launch.py
UI/scooter_ui_dummy/scooter_ui_dummy/: holding_object.py  pick_selection.py  pick_selection_confirm.py  wait_for_begin.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/doxygen/: Doxyfile
docs/source/modules/: modules.rst  scooter_core.rst  scooter_fsm.rst  scooter_interfaces.rst  scooter_manipulation.rst  scooter_perception.rst  scooter_ui_dummy.rst
scooter_core/: README.md  package.xml  setup.cfg  setup.py
scooter_core/launch/: scooter_core.launch.py
scooter_core/scooter_core/: scooter_core.py
scooter_fsm/: package.xml  setup.cfg  setup.py
scooter_fsm/scooter_fsm/: scooter_fsm.py  state.py  states.py
scooter_interfaces/: CMakeLists.txt  README.md  package.xml
scooter_interfaces/action/: GetCloud.action  GoToJointConfig.action  Segmentation.action
scooter_interfaces/srv/: GetCloud.srv  HoldingObject.srv  Pick.srv  PickSelection.srv  PickSelectionConfirm.srv
scooter_manipulation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
scooter_manipulation/config/: ur5_environment.csv
scooter_manipulation/launch/: manipulation_bringup.launch.py  scooter_manipulation.launch.py  ur_driver_bringup.launch.py
scooter_manipulation/scooter_manipulation/: joint_configs.py  pick.py  static_collision_object_publisher.py
scooter_manipulation/scripts/: test_go_to_joint_config.py
scooter_manipulation/src/: go_to_joint_config.cpp  static_collision_object_publisher.cpp  test_go_to_joint_config.py
scooter_perception/: package.xml  setup.cfg  setup.py
scooter_perception/scooter_perception/: get_cloud.py  segmentation.py
ui/scooter_ui_dummy/: setup.cfg
ui/scooter_ui_dummy/scooter_ui_dummy/: pick_selection.py  pick_selection_confirm.py
